--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,48 @@
 {
     "name": "2amigos/yii2-translateable-behavior",
-    "description": "ActiveRecord attributes translations for Yii2.",
-    "keywords": ["extension", "behavior", "translation", "yii"],
+    "description": "The translateable behavior for the Yii framework",
+    "keywords": [
+        "2amigos",
+        "yii",
+        "yii2",
+        "yii 2",
+        "behavior",
+        "translation"
+    ],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
+    "homepage": "https://github.com/2amigos/yii2-translateable-behavior",
     "authors": [
         {
-            "name": "Antonio Ramirez",
-            "email": "ramirez.cobos@gmail.com",
-            "homepage": "http://2amigos.us"
+            "name": "Alexander Kochetov",
+            "email": "creocoder@gmail.com",
+            "role": "Developer"
+        },
+        {
+            "name": "2amigOS! Consulting Group",
+            "email": "hola@2amigos.us",
+            "homepage": "http://2amigos.us",
+            "role": "Developer"
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "~2.0.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
-            "dosamigos\\translateable\\": ""
+            "dosamigos\\translateable\\": "src"
+        }
+    },
+    "extra": {
+        "asset-installer-paths": {
+            "npm-asset-library": "vendor/npm",
+            "bower-asset-library": "vendor/bower"
+        },
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
