--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require": {
         "yiisoft/yii2": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
+    },
     "autoload": {
         "psr-4": {
             "dosamigos\\translateable\\": ""
